<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/jmeno_vystup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/jmeno_nevyplneno"
        android:textSize="30dp"
    />
    <TextView
        android:id="@+id/prijmeni_vystup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="50dp"
        android:text="@string/prijmeni_nevyplneno"
        android:textSize="30dp"
        />
    <TextView
        android:id="@+id/narozeni_vystup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="90dp"
        android:text="@string/narozeni_nevyplneno"
        android:textSize="30dp"
        />
    <TextView
        android:id="@+id/podminky_vystup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="130dp"
        android:text="@string/nesouhlas"
        android:textSize="30dp"
        />
</RelativeLayout>